# Battery-Swapping-Network-Intelligence-Platform

./: .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
analytics/anomaly_detection/: anomaly_detector.py
analytics/battery_health/: health_engine.py
analytics/forecasting/: demand_forecaster.py
analytics/optimization/: inventory_optimizer.py
analytics/reporting/: report_generator.py
backend/: config.py
backend/api/: dependencies.py  main.py
backend/api/middleware/: logging_middleware.py
backend/api/routers/: analytics.py  auth.py  batteries.py  forecasting.py  optimization.py  simulation.py
backend/application/dtos/: battery_dto.py
backend/application/services/: analytics_service.py  battery_service.py
backend/domain/entities/: battery.py  station.py  swap_event.py  vehicle.py
backend/domain/repositories/: battery_repository.py  station_repository.py  swap_event_repository.py
backend/infrastructure/database/: models.py  session.py
backend/infrastructure/database/repositories/: battery_repository_impl.py
data/etl/: pipeline.py
data/generators/: synthetic_data_generator.py
data/sql/: analytics_queries.sql  materialized_views.sql  schema.sql
docs/: system_design.md
frontend/dashboard/: app.py
tests/: conftest.py
tests/analytics/: test_anomaly_detector.py  test_demand_forecaster.py  test_health_engine.py  test_optimizer.py
tests/integration/: test_api.py
tests/unit/: test_battery_entity.py  test_etl_pipeline.py  test_station_entity.py
