[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "battery-swapping-intelligence-platform"
version = "1.0.0"
description = "Enterprise analytics platform for EV battery-swapping network operations"
authors = [{ name = "P Rishabh" }]
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=backend --cov=analytics --cov-report=term-missing --cov-report=html"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint.per-file-ignores]
"frontend/dashboard/app.py" = ["E701"]

[tool.coverage.run]
omit = [
    "backend/api/*",
    "backend/application/*",
    "backend/infrastructure/*",
    "backend/config.py",
    "backend/domain/repositories/*",
    "analytics/reporting/report_generator.py",
]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
